请求队列换成LinkedList